[package]
name = "firn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
encoding_rs = "0.8"
encoding_rs_io = "0.1"
env_logger = "0.10"
iced = { version = "0.10", features = ["canvas", "tokio"] }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
subprocess = "0.2"
tokio = { version = "1.32", features = ["full"] }
