[package]
name = "firn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
env_logger = "0.10"
iced = { version = "0.10", features = ["canvas", "tokio"] }
log = "0.4"
pty-process = { version = "0.4.0", features = ["async"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.32", features = ["full"] }
tokio-util = "0.7.10"
unicode-segmentation = "1.10"
utf-8 = "0.7.6"
